name:                nanovg
version:             0.1.0.0
synopsis:            Bindings for the nanovg 2D vector drawing library
-- description:
homepage:            https://github.com/duncanburke/nanovg-haskell
license:             MIT
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
copyright:           Duncan Burke
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
