name:                nanovg
version:             0.1.0.0
synopsis:            Bindings for the nanovg 2D vector drawing library
-- description:
homepage:            https://github.com/duncanburke/nanovg-haskell
license:             MIT
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
copyright:           Duncan Burke
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:duncanburke/nanovg-haskell.git

library
  ghc-options:         -Wall
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Graphics.Rendering.NanoVG,
                       Graphics.Rendering.NanoVG.Internal,
                       Graphics.Rendering.NanoVG.Types
  include-dirs:        nanovg/src
                       cbits
  includes:            nanovg.h
                       nanovg_haskell.h
                       nanovg_gl.h
  c-sources:           nanovg/src/nanovg.c
                       cbits/nanovg_haskell.c
  extra-libraries:     GLU, GL, m
